--- a/config/api_config.yml
+++ b/config/api_config.yml
@@ -7,3 +7,8 @@ production:
   amazon_bucket_name: slots-prod
   amazon_access_key: AKIAJVII7JL457FNV7VQ
   amazon_access_secret: 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
+
+beta:
+  amazon_bucket_name: slots-beta
+  amazon_access_key: AKIAJVII7JL457FNV7VQ
+  amazon_access_secret: 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
