--- a/config/paperclip_options.yml
+++ b/config/paperclip_options.yml
@@ -7,7 +7,7 @@ production: &production
   :images:
     :file:
       :storage: !ruby/symbol s3
-      :s3_protocol: :http
+      :s3_protocol: :https
       :s3_credentials:
         <<: *default_settings
       :s3_permissions:
@@ -24,7 +24,7 @@ production: &production
   :assets:
     :file:
       :storage: !ruby/symbol s3
-      :s3_protocol: :http
+      :s3_protocol: :https
       :s3_credentials:
         <<: *default_settings
       :s3_permissions:
