--- a/config/redis.yml
+++ b/config/redis.yml
@@ -8,7 +8,7 @@ development:
 
 # production environment
 production:
-    host: 'slot-redis.slotapi.com'
+    host: 'redis.slotapi.com'
     port: '6379'
 
 # production environment
