some changes to allow for deployment of rails app to reindeercasinoslotvegas.com domain

--- a/config/redis.yml
+++ b/config/redis.yml
@@ -8,7 +8,7 @@ development:
 
 # production environment
 production:
-    host: 'redis.slotapi.com'
+    host: 'redis.reindeercasinoslotvegas.com '
     port: '6379'
 
 # production environment
