--- a/config/database.yml
+++ b/config/database.yml
@@ -5,7 +5,7 @@ default: &default
   reaping_frequency: 3
   username: 'root'
   password: 'pass123654' 
-  host: 'slotapi.cggeyahil2p4.us-west-2.rds.amazonaws.com'
+  host: 'slot-vegas.cggeyahil2p4.us-west-2.rds.amazonaws.com'
   port: '3306'
 
 
