some changes to allow deployment of slot api for vasco

--- a/config/database.yml
+++ b/config/database.yml
@@ -3,8 +3,8 @@ default: &default
   encoding: utf8
   pool: 20
   reaping_frequency: 3
-  username: 'root'
-  password: 'CuYMa7fw' 
+  username: 'slotvasco'
+  password: 'pass123654' 
   host: 'slotvasco.cmo4dpfbrlkj.us-west-2.rds.amazonaws.com'
   port: '3306'
 
