--- a/config/redis.yml
+++ b/config/redis.yml
@@ -8,7 +8,7 @@ development:
 
 # production environment
 production:
-    host: 'redis.slotvasco.com'
+    host: 'redis.slits.online'
     port: '6379'
 
 # production environment
