Some changes to allow for deployment of slot_machine on Vasco infra using Optimized branch

--- a/config/redis.yml
+++ b/config/redis.yml
@@ -8,7 +8,7 @@ development:
 
 # production environment
 production:
-    host: 'slot-redis.slotapi.com'
+    host: 'redis.slits.online'
     port: '6379'
 
 # production environment
