--- a/config/api_config.yml
+++ b/config/api_config.yml
@@ -4,7 +4,7 @@ development:
   amazon_access_secret: bLz2sXTYNvcitXjE2pJreEDvgc1BZFKdyBKN1zFc
 
 production:
-  amazon_bucket_name: slots-prod
+  amazon_bucket_name: slots-vegas
   amazon_access_key: AKIAJVII7JL457FNV7VQ
   amazon_access_secret: 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
 
