--- a/config/api_config.yml
+++ b/config/api_config.yml
@@ -4,9 +4,9 @@ development:
   amazon_access_secret: bLz2sXTYNvcitXjE2pJreEDvgc1BZFKdyBKN1zFc
 
 production:
-  amazon_bucket_name: slots-prod
-  amazon_access_key: AKIAJVII7JL457FNV7VQ
-  amazon_access_secret: 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
+  amazon_bucket_name: slots-vasco
+  amazon_access_key: AKIAJ3OXBHRMC6A5X5NQ
+  amazon_access_secret: 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
 
 beta:
   amazon_bucket_name: slots-beta
